# tracey

./: .gitignore  DID.md  LICENSE  Pipfile  README.md  TODO.md  meson.build  plotus.py  tracey.py
data/: meson.build  org.devsim.Tracey.appdata.xml  org.devsim.Tracey.desktop  org.devsim.Tracey.gschema.xml
src/: meson.build  tracey.gresource.xml  tracey.in  tracey_app.py
